<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">恩纽</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- TabHost -->
    <string name="main_homepage">首页</string>
    <string name="main_shopping">社区</string>
    <string name="main_shoppingcart">发现</string>
    <string name="main_my">我的</string>
 
     
      
    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">预览(%1$d/%2$d)</string>
 
 
    <string name="cant_find_pictures">找不到图片</string>
    <string name="chat_send">发送</string>
    <string name="ugglide_cancel_send">手指上滑，取消发送</string>
	<string name="hold_down_talk">按住说话</string>
	<string name="camera">拍照</string>
	<string name="photo">照片</string>
</resources> 
